@@ -1,6 +1,14 @@
-DIST sequel-2.5.0.gem 242176 RMD160 61317fb40d42098e595ff2b4d40fdc6cf3d66568 SHA1 af6d0534678d03d8a4286cc822b714ae58836925 SHA256 8c8d599a382e0873ab744defc558783e06850936b6301119fbcb8aad95985bfc
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST sequel-2.6.0.gem 246784 RMD160 9e9ecd4ee79d90e1738934d8c325c17bb9be5e1f SHA1 ff1c8733afdd7ea41cf6f959ebcc1502367e9a4c SHA256 002f5bf2b3e7e22369d85f173a205577faa65b1bb224f4631e049090c3c7970d
-EBUILD sequel-2.5.0.ebuild 358 RMD160 0687c909729f5fa4e9cfc23fb65f3232aa5bc17d SHA1 5b0aa5fa3e19984cede2d4c00ab978b45df882ee SHA256 52cb54d2fe0923787c624f6c43fb66cb8193c702359af657710d6b080212639d
 EBUILD sequel-2.6.0.ebuild 358 RMD160 0687c909729f5fa4e9cfc23fb65f3232aa5bc17d SHA1 5b0aa5fa3e19984cede2d4c00ab978b45df882ee SHA256 52cb54d2fe0923787c624f6c43fb66cb8193c702359af657710d6b080212639d
-MISC ChangeLog 382 RMD160 33d0c7773ccbf23566c795d22c72393bbcda0687 SHA1 49a850247e9113f71fc468e28c8761db02bd9f2f SHA256 9cfc3b7a26175ad084b9330453d981904ae998ff079c20263cd401e758eb458a
+MISC ChangeLog 477 RMD160 b7fa0b117d07786a1d55e76444a54db9ffa9ded2 SHA1 c8dd3610988ab41e3d62bcca5eca3dd85b8230bf SHA256 4f8dace6a489730744ac4958874488b5acd73677f217a00f0f600359e98d8ecc
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk74OYcACgkQiIP6VqMIqNe2egD8ChwJwC9u1wV+ak0NZf5ABubj
+W8g/L21cBIvg8Va4EtYA/2qvbUV3fePBJhv5gAio+pTwP7xjPsCEStwY9NFDQeE0
+=ouPr
+-----END PGP SIGNATURE-----
