@@ -1,19 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit ruby gems
-
-USE_RUBY="ruby18 ruby19"
-
-DESCRIPTION="A lightweight database toolkit for Ruby"
-HOMEPAGE="http://sequel.rubyforge.org"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND=">=dev-lang/ruby-1.8.4"
-
